; ModuleID = '/home/carl/AnghaBench/openssl/apps/lib/extr_apps.c_parse_yesno.c'
source_filename = "/home/carl/AnghaBench/openssl/apps/lib/extr_apps.c_parse_yesno.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @parse_yesno(i8* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i8*, i8** %4, align 8
  %7 = icmp ne i8* %6, null
  br i1 %7, label %8, label %15

8:                                                ; preds = %2
  %9 = load i8*, i8** %4, align 8
  %10 = load i8, i8* %9, align 1
  %11 = sext i8 %10 to i32
  switch i32 %11, label %14 [
    i32 102, label %12
    i32 70, label %12
    i32 110, label %12
    i32 78, label %12
    i32 48, label %12
    i32 116, label %13
    i32 84, label %13
    i32 121, label %13
    i32 89, label %13
    i32 49, label %13
  ]

12:                                               ; preds = %8, %8, %8, %8, %8
  store i32 0, i32* %3, align 4
  br label %17

13:                                               ; preds = %8, %8, %8, %8, %8
  store i32 1, i32* %3, align 4
  br label %17

14:                                               ; preds = %8
  br label %15

15:                                               ; preds = %14, %2
  %16 = load i32, i32* %5, align 4
  store i32 %16, i32* %3, align 4
  br label %17

17:                                               ; preds = %15, %13, %12
  %18 = load i32, i32* %3, align 4
  ret i32 %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
